Added the discovery section of the app

--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./src/components/assets/logo.svg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PingSpace - Connect, Chat, Share</title>
-    <meta name="description" content="PingSpace - The ultimate messaging app with advanced features, spaces, marketplace, and AI-powered smart inbox." />
+    <meta
+      name="description"
+      content="PingSpace - The ultimate messaging app with advanced features, spaces, marketplace, and AI-powered smart inbox."
+    />
   </head>
   <body>
     <div id="root"></div>
